-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2000-01-22  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-controller-base.h (is_finished): added
	
2000-01-15  Kai Vehmanen <kaiv@wakkanet.fi>

	* samplebuffer.h (swap_bytes): removed
	* samplebuffer.h (copy): added
	* eca-audio-objects (get_type_from_extension): now a static member
	* eca-controller.h: split into eca-controller.h,
	eca-controller-base.h and eca-controller-objects.h - only minor
	changes to ECA_CONTROLLER interface 
	
2000-01-13  Kai Vehmanen <kaiv@wakkanet.fi>

	* audioio-alsa2.*: added
	* audioio-alsa.*: ALSADEVICE renamed to ALSA_PCM_DEVICE
	* audioio-lbalsa.*: ALSALBDEVICE renamed to ALSA_LOOPBACK_DEVICE
	
2000-01-07

	* audiofx_rcfilter.h, audiofx_rcfilter.src: added
	
1999-12-21

	* audioio-ewf.h: EWFFILE now directly inherits AUDIO_IO
	
1999-12-16
	
	* audiofx_amplitude.cpp: NOISEGATE_MONO -> NOISEGATE
	* library version changed to 4:0:0
	
1999-12-15  Kai Vehmanen  <kaiv@wakkanet.fi>

	* 1.6.9r9 released
	* library version 3:0:0 frozen
	
1999-12-11  Kai Vehmanen  <kaiv@wakkanet.fi>

	* dynamic-object.h: added
	* ctrl_source.h -> ctrl-source.h
	* gcontroller.* -> generic-controller.*
	* parameter control subsystem rewritten, affects all related
	classes (class inheriting from CONTROLLER_SOURCE,
	GENERIC_CONTROLLER, ECA_OBJECT_MAP, ECA_CHAIN, ECA_CHAINSETUP
	and so on)
	
1999-12-06  Kai Vehmanen  <kaiv@wakkanet.fi>

	* ctrl_source.h: controller sources now inheric from 
	DYNAMIC_PARAMETERS - this required many changes to controller
	source classes
	* eca-chainop-map.h: renamed to eca-object-map.h
	* dynamic-parameters.h (name): added
	* dynamic-parameters.h (parameter_names): changed return type,
	affects all sub-classes
	* library version changed to 3:0:0
	
1999-12-04  Kai Vehmanen  <kaiv@wakkanet.fi>

	* 1.6.8r8 released